# pos_system

./: .env.cashier.example  .env.example  .gitignore  DESKTOP_UPDATES.md  MERGE_COMPLETION_SUMMARY.md  MERGE_EXECUTION_GUIDE.md  MODULES_AND_FEATURES.md  NEXA_POS_Modules_and_Features.docx  POCKETHOST_SETUP.md  QUICK_START_CHECKLIST.md  README.md  RESTRUCTURING_NOTES.md  SETUP_INSTRUCTIONS.txt  TAURI_WINDOWS_BUILD.md  USER_MANUAL.docx  USER_MANUAL.md  USER_MANUAL.rtf  USER_MANUAL_styled.docx  VERCEL_DEPLOYMENT.md  eslint.config.js  index.html  main.js  package-lock.json  package.json  vercel.json  vite.config.js
db_json_export/: ApplicationProperty.json  Barcode.json  Company.json  Counter.json  Country.json  Customer.json  DocumentCategory.json  DocumentType.json  FloorPlan.json  FloorPlanTable.json  Migration.json  PaymentType.json  PosOrder.json  PosOrderItem.json  PosPrinterSelection.json  PosPrinterSelectionSettings.json  PosVoid.json  Product.json  ProductGroup.json  SecurityKey.json  StartingCash.json  Stock.json  StockControl.json  Template.json  User.json  Warehouse.json  ZReport.json  _summary.json  sqlite_sequence.json
migration_reports/: legacy-import-dry-run.json
pocketbase/: README.md  pb_schema.json
public/: splash.html
scripts/: backfill-base-quantity.mjs  cleanup-product-relations.mjs  configure-pocketbase-rules.mjs  debug-pb-login.mjs  generate_docx.cjs  generate_docx.js  generate_docx.py  tauri-build.mjs  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+136 files in other folders)
